+ Avoid double scrollbar in log pages. + Modify some menu titles and controller URLs for better name coherence.

--- a/less/zynthian.less
+++ b/less/zynthian.less
@@ -714,9 +714,9 @@ div#drop-zone.has-advanced-upload .box__dragndrop {
 
 div.log-panel{
 	margin-top: 10px;
-	height: 600px;
+/*	height: 600px;
 	overflow-y: hidden;
-	overflow: auto;
+	overflow: auto;*/
 	white-space: nowrap;
 }
 
